WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146211
Crashes in hit testing under WebPage::acceptsFirstMouse() while handling sync message in plug-in teardown
https://bugs.webkit.org/show_bug.cgi?id=146211
Summary
Crashes in hit testing under WebPage::acceptsFirstMouse() while handling sync...
Anders Carlsson
Reported
2015-06-22 12:25:57 PDT
Crashes in hit testing under WebPage::acceptsFirstMouse() while handling sync message in plug-in teardown
Attachments
Patch
(1.98 KB, patch)
2015-06-22 12:27 PDT
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2015-06-22 12:27:51 PDT
Created
attachment 255360
[details]
Patch
Anders Carlsson
Comment 2
2015-06-22 12:31:30 PDT
Committed
r185837
: <
http://trac.webkit.org/changeset/185837
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug