Crashes in hit testing under WebPage::acceptsFirstMouse() while handling sync message in plug-in teardown https://bugs.webkit.org/show_bug.cgi?id=146211 rdar://problem/17180615

Reviewed by Sam Weinig.

If we're inside a sendSync message when we're being called, just bail.

* WebProcess/WebPage/mac/WebPageMac.mm:
(WebKit::WebPage::acceptsFirstMouse):

Canonical link: https://commits.webkit.org/164277@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185837 268f45cc-cd09-0410-ab3c-d52691b4dbfc